src/index.css
@import "tailwindcss";

@layer base {
  :root {
    color-scheme: light;
  }
}

@font-face {
  font-family: "IranSansM";
  src: url("./assets/fonts/IRANSansMedium.woff2");
}

@font-face {
  font-family: "IranSansB";
  src: url("./assets/fonts/IRANSansBold.woff2");
}

@theme {
  --font-sansMed: "IranSansM", sans-serif;
  --font-sansBold: "IranSansB", sans-serif;
  --color-caffee-50: #fdf6f0;
  --color-caffee-100: #ede0d7;
  --color-caffee-200: #d4c5b2;
  --color-caffee-300: #c4b09c;
}

